# rustfrontend

./: .gitignore  Cargo.toml  README.md  index.html  input.css
.github/workflows/: gh-pages-deploy.yml
src/: hero.rs  main.rs  nav.rs
style/: output.css
